--- a/Lesson3/css/styles.css
+++ b/Lesson3/css/styles.css
@@ -6,7 +6,93 @@
 }
 
 header,
+.logo {
+  
+  position: relative; right: 150px;
+  size: 50%;
+
+}
+
+.topnav {
+  background-color: #fff;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  font-family: Arial;
+  color: #61606b;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #fff;
+  color: #ff4650;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #fff;
+  
+
+  color: #ff4650;
+}
+.search {
+  width: 100%;
+  position: relative; left:500px;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 2px solid #edeff5;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 100px;
+  height: 34px;
+  border: none;
+  background: #ff464f;
+  text-align: top;
+
+
+
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 12px;
+
+
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
 aside,
+
 article,
 footer {
   background: #eaeaea;
@@ -29,3 +115,4 @@ body {
   align-items: center;
   justify-content: center;
 }
+
